--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 pip
+Microsoft Visual C++ Compiler for Python 2.7
+Crypto 1.3.4
+pycrypto
 Python 2.7.9
 Tkinter
 pysnmp-4.2.5
@@ -6,5 +9,5 @@ pysnmp-mibs-0.14
 scp-0.8.0
 paramiko
 netifaces-0.10.4-cp27-none-win_amd64.whl
-zerorpc-0.4.4.tar.gz
+
 
